--- a/웹프과제/re6.html
+++ b/웹프과제/re6.html
@@ -2,14 +2,15 @@
 <html>
 
 <head>
-    <title>document.getElementsByTagName()</title>
+    <title>document.getElementsByTagName()</title> <!--TageName을 통해 요소를 찾습니다.-->
     <script>
+        // 아래 코드에서 onclick="change()"를 통해 클릭이 이뤄질 시 아래 function이 작동하게 됩니다. 
         function change() {
-            var spanArray = document.getElementsByTagName('span');
+            var spanArray = document.getElementsByTagName('span'); // span태그를 갖고있는 요소를 찾아 spanArray에 할당합니다.
             for (var i = 0; i < spanArray.length; i++) {
                 var span = spanArray[i];
                 span.style.color = 'orchid';
-                span.style.fontSize = '20px';
+                span.style.fontSize = '20px'; //해당 태그에 컬러와 폰트사이즈를 할당합니다.
             }
         }
     </script>
