--- a/웹프과제/re7.html
+++ b/웹프과제/re7.html
@@ -7,6 +7,8 @@
 
 <body>
     <h3>write()와 writeln() 활용</h3>
+    <!-- 일반적인 write()의 경우 작성 후 옆으로 계속해서 추가 작성이 되지만
+    writeln()의 경우 작성 뒤 줄바꿈이 일어납니다-->
     <hr>
     <script>
         document.write('<h3>동물원에 소풍갑시다</h3>');
