--- a/웹프과제/re10.html
+++ b/웹프과제/re10.html
@@ -4,16 +4,16 @@
     <title>문서의 동적 구성</title>
     <script>
         function createDIV() {
-            var obj = document.getElementById('parent');
-            var newDIV = document.createElement('div');
-            newDIV.innerHTML = '새로 생성된 DIV입니다.';
-            newDIV.setAttribute('id', 'myDiv');
-            newDIV.style.backgroundColor = 'yellow';
-            newDIV.onclick = function () {
-                var p = this.parentElement; // 부모 HTML 태그 요소
-                p.removeChild(this); // 자신을 부모로부터 제거
+            var obj = document.getElementById('parent');// obj에 parent id 값으 가진 태그요소를 가져와 할당합니다.
+            var newDIV = document.createElement('div');// newDIV는 div요소를 생성하여 할당합니다. 
+            newDIV.innerHTML = '새로 생성된 DIV입니다.';// newDIV에 innerHTML로 해당 문자열을 할당합니다.
+            newDIV.setAttribute('id', 'myDiv'); // newDIV의id값에 myDiv를 할당합니다.
+            newDIV.style.backgroundColor = 'yellow'; // newDIV의 스타일 배경색을 노란색으로 할당합니다.
+            newDIV.onclick = function () { 
+                var p = this.parentElement;// 만약 실행 될 시에 부모 HTML 태그 요소를 p에 할당하고 자신을 부모로부터 제거합니다. 
+                p.removeChild(this); 
             };
-            obj.appendChild(newDIV);
+            obj.appendChild(newDIV); // obj에 생성한 newDIV를 추가합니다.
         }
     </script>
 </head>
